packages/react/src/components/UIShell/components/styles/_side-nav.scss
/* ... */
// panel expanded styles
.#{$prefix}--side-nav--panel.#{$prefix}--side-nav--expanded {
  overflow: hidden;

  &:hover {
    .#{$prefix}--side-nav__items {
      overflow-y: auto;
    }
  }

  .#{$prefix}--side-nav__items {
    overflow-y: auto;
  }

  .#{$prefix}--side-nav__item {
    overflow: visible;
  }
}

.#{$prefix}--side-nav__toggle-container {
  position: absolute;
  background: $background;
  inline-size: 100%;
  inset-block-end: 0;
}

//----------------------------------------------------------------------------
// Rail
//----------------------------------------------------------------------------
.#{$prefix}--side-nav--rail {
  z-index: 7999; /* needs to be below header */
  border-inline-end: 1px solid $border-subtle;
}

@each $breakpoint in ('sm', 'md', 'lg', 'xlg', 'max') {
  .#{$prefix}--side-nav--rail.#{$prefix}--side-nav--hide-rail-breakpoint-down-#{$breakpoint} {
    @include breakpoint-down($breakpoint) {
      display: none;
    }
  }
}

// allow overlay to display at all breakpoints
.#{$prefix}--side-nav__overlay-active {
  z-index: z('overlay');
  background-color: $overlay;
  block-size: 100vh;
  inline-size: 100vw;
  opacity: 1;
  transition: opacity $transition-expansion $standard-easing,
    background-color $transition-expansion $standard-easing;
}

//----------------------------------------------------------------------------
// Slot
//----------------------------------------------------------------------------
.#{$prefix}--side-nav__slot {
  display: flex;
  align-items: center;
  margin: 0 $spacing-05 $spacing-05 $spacing-05;
  block-size: 2rem;
}

.#{$prefix}--side-nav__slot-item {
  inline-size: 100%;
}

// icon shown when rail or panel is collapsed
.#{$prefix}--side-nav__slot .#{$prefix}--side-nav__icon {
  display: none;
}

.#{$prefix}--side-nav--rail:not(.#{$prefix}--side-nav--expanded),
.#{$prefix}--side-nav--panel:not(.#{$prefix}--side-nav--expanded) {
  .#{$prefix}--side-nav__slot .#{$prefix}--side-nav__icon {
    display: block;
  }
}

// hide slot item when rail or panel collapsed
.#{$prefix}--side-nav--rail .#{$prefix}--side-nav__slot-item,
.#{$prefix}--side-nav--panel .#{$prefix}--side-nav__slot-item {
  display: none;
}

.#{$prefix}--side-nav--rail.#{$prefix}--side-nav--expanded,
.#{$prefix}--side-nav--panel.#{$prefix}--side-nav--expanded {
  .#{$prefix}--side-nav__slot-item {
    display: block;
  }
}

//----------------------------------------------------------------------------
// Mobile
//----------------------------------------------------------------------------
@include breakpoint-down(md) {
  .#{$prefix}--side-nav--collapsible.#{$prefix}--side-nav--expanded {
    inline-size: 100%;
    max-inline-size: 100%;
  }

  .#{$prefix}--side-nav__menu-secondary-wrapper-expanded {
    z-index: 1;
    inline-size: 100%;
    inset-inline-start: 0;
  }

  .#{$prefix}--side-nav__back-button.#{$prefix}--btn--ghost {
    flex-direction: row-reverse;
    justify-content: flex-end;
    gap: 1rem;
    inline-size: 100%;
    max-inline-size: 100%;

    &:focus {
      box-shadow: inset 0 0 0 1px $focus;
    }
  }

  .#{$prefix}--side-nav__back-button.#{$prefix}--btn--ghost:not([disabled]) {
    svg {
      align-self: center;
      fill: $icon-interactive;
    }

    &:hover svg {
      fill: $link-primary-hover;
    }
  }
}

